# shoppyshops.ai

./: .gitignore  README.md  SPEC.md  pyproject.toml  run.py  shopify.py
ebay/: ebay.py  models.py
ebay/migrations/: 0001_initial.py  0002_ebayorderitem_actual_shipping_cost_and_more.py  0003_delete_ebayoauthcredentials.py
meta/: __init__.py  meta.py  models.py  test_business.py  test_connection.py  test_portfolio.py  test_roas.py
meta/management/commands/: collect_meta_data.py  daily_roas_report.py
meta/migrations/: 0001_metaadaccount_metaadset_metacampaign_metaportfolio_and_more.py  XXXX_initial.py
reports/: profit_report.py
shopify/: models.py  shopify.py  sync.py
shopify/migrations/: 0001_initial.py
shoppyshops/: settings.py
templates/: base.html  index.html
tests/: test_meta.py  test_meta_output.txt
