[tool.poetry]
name = "shoppyshops"
version = "0.1.0"
description = ""
authors = ["Daryl Antony <daryl@commoncode.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"
django = "^5.1.2"
django-htmx = "^1.20.0"
reloady = "^0.1.7"
shopifyapi = "^12.6.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
